--- a/01ex_Fundamentals.ipynb
+++ b/01ex_Fundamentals.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +36,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0), (0, 1), (0, 2), (0, 3), (1, 0), (1, 1), (1, 2), (1, 3), (2, 0), (2, 1), (2, 2), (2, 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1.1\n",
+    "\n",
+    "ans = [(i,j) for i in range(3) for j in range(4)]\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1.2\n",
+    "\n",
+    "ans=[x*x for x in range(5) if x%2==0]\n",
+    "print(ans)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +100,7 @@
     "x = 5\n",
     "def f(alist):\n",
     "    for i in range(x):\n",
-    "        alist.append(i)\n",
+    "           alist.append(i)\n",
     "    return alist\n",
     "\n",
     "alist = [1,2,3]\n",
@@ -88,6 +128,32 @@
    "metadata": {},
    "source": [
     "4\\. Write the factorial function so that it a) does and b) does not use recursion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "#4.b LUI LA FA IN ALTRO MODO\n",
+    "\n",
+    "def factorial(n):\n",
+    "    x=n\n",
+    "    for i in range(1,n,1):\n",
+    "        x=x*(n-i)\n",
+    "    return x\n",
+    "\n",
+    "n=4\n",
+    "print(factorial(4))"
    ]
   },
   {
@@ -160,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
