--- a/04_OSEMN.ipynb
+++ b/04_OSEMN.ipynb
@@ -25,6 +25,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! wget https://www.dropbox.com/s/3vigxoqayo389uc/populations.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "data = np.loadtxt('populations.txt')\n",
     "year, hares, lynxes, carrots = data.T # trick: columns to variables\n",
@@ -97,8 +106,8 @@
    "outputs": [],
    "source": [
     "# get the dataset and its description on the proper data directory\n",
-    "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/magic/magic04.data -P ~/data/\n",
-    "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/magic/magic04.names -P ~/data/    "
+    "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/magic/magic04.data -P /data/\n",
+    "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/magic/magic04.names -P /data/    "
    ]
   },
   {
@@ -185,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = \"~/data/magic04.data\"\n",
+    "file_name = \"/home/eminentc/data/magic04.data\"\n",
     "\n",
     "# mode can be specified for writing, reading or both\n",
     "with open(file_name, mode='r') as f:\n",
@@ -216,7 +225,7 @@
    "source": [
     "import csv\n",
     "\n",
-    "with open('magic04.data') as data_file:\n",
+    "with open('/home/eminentc/data/magic04.data') as data_file:\n",
     "    for line in csv.reader(data_file, delimiter=','): # the delimiter is often guessed by the reader\n",
     "        # again note that elements of each line are treated as strings\n",
     "        # if you need to convert them into numbers, you need to to that yourself\n",
@@ -295,7 +304,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%file example.json\n",
@@ -326,7 +337,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!cat example.json"
@@ -335,7 +348,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -346,7 +361,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# and can be parsed using standard key lookups\n",
@@ -372,7 +389,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import h5py\n",
@@ -400,7 +419,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with h5py.File('example.hdf5') as f:\n",
@@ -423,7 +444,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -435,7 +458,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -450,7 +475,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -461,7 +488,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data.plot.hist(\"fAlpha\")"
@@ -470,7 +499,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -491,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
