--- a/04_OSEMN.ipynb
+++ b/04_OSEMN.ipynb
@@ -25,15 +25,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! wget https://www.dropbox.com/s/3vigxoqayo389uc/populations.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import numpy as np\n",
     "data = np.loadtxt('populations.txt')\n",
     "year, hares, lynxes, carrots = data.T # trick: columns to variables\n",
@@ -106,8 +97,8 @@
    "outputs": [],
    "source": [
     "# get the dataset and its description on the proper data directory\n",
-    "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/magic/magic04.data -P /data/\n",
-    "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/magic/magic04.names -P /data/    "
+    "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/magic/magic04.data -P ~/data/\n",
+    "!wget https://archive.ics.uci.edu/ml/machine-learning-databases/magic/magic04.names -P ~/data/    "
    ]
   },
   {
@@ -194,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = \"/home/eminentc/data/magic04.data\"\n",
+    "file_name = \"~/data/magic04.data\"\n",
     "\n",
     "# mode can be specified for writing, reading or both\n",
     "with open(file_name, mode='r') as f:\n",
@@ -225,7 +216,7 @@
    "source": [
     "import csv\n",
     "\n",
-    "with open('/home/eminentc/data/magic04.data') as data_file:\n",
+    "with open('magic04.data') as data_file:\n",
     "    for line in csv.reader(data_file, delimiter=','): # the delimiter is often guessed by the reader\n",
     "        # again note that elements of each line are treated as strings\n",
     "        # if you need to convert them into numbers, you need to to that yourself\n",
@@ -306,9 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%file example.json\n",
@@ -339,9 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!cat example.json"
@@ -350,9 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
@@ -363,9 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# and can be parsed using standard key lookups\n",
@@ -391,9 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import h5py\n",
@@ -421,9 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with h5py.File('example.hdf5') as f:\n",
@@ -446,9 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -1527,7 +1504,6 @@
      "output_type": "display_data"
     }
    ],
->>>>>>> upstream/master
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -1536,12 +1512,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-=======
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -1575,7 +1545,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-
    "outputs": [],
    "source": [
     "import seaborn as sns"
@@ -1584,9 +1553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1607,7 +1574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
