--- a/05ex_Pandas.ipynb
+++ b/05ex_Pandas.ipynb
@@ -120,7 +120,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#4 \n",
+    "\n",
+    "\n",
+    "data.assign(time = )"
+   ]
   }
  ],
  "metadata": {
