--- a/01ex_Fundamentals.ipynb
+++ b/01ex_Fundamentals.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2\\. Converte the following function into a pure function with no global variables or side effects"
+    "2\\. Convert the following function into a pure function with no global variables or side effects"
    ]
   },
   {
